# node-webrtc-rust

./: .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  docker-compose.test.yml  eslint.config.js  package-lock.json  package.json  tsconfig.eslint.json
.cursor/rules/: ci-documentation.mdc  ci-local-validation.mdc  ci-validation.mdc  ci-workflow-triggers.mdc  commit-workflow.mdc  examples-workflow.mdc  local-native-build.mdc  package-lock-workspace-sync.mdc  plan-execute-workflow.mdc  plans-location.mdc  pre-commit-quality.mdc  public-api-docs.mdc  release-ts-build.mdc  rust-zero-copy.mdc  sdk-build.mdc  typescript-node.mdc
.github/actions/ci-build-native-host/: action.yml
.github/actions/ci-build-native-linux/: action.yml
.github/actions/ci-cache-ts-dist/: action.yml
.github/actions/ci-prepare-self-hosted-workspace/: action.yml
.github/actions/ci-restore-cargo-target/: action.yml
.github/actions/ci-restore-workspace-ownership/: action.yml
.github/workflows/: build-main.yml  build.yml  ci-image.yml  release.yml  reusable-build-host.yml  reusable-build-linux.yml  reusable-stage-cached-bindings.yml  reusable-test.yml
crates/conference/: Cargo.toml
crates/conference/src/: error.rs  events.rs  lib.rs  mute.rs  participant.rs  room.rs  server.rs  signaling.rs
crates/conference/tests/: room_mix_test.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  data_channel.rs  debug.rs  error.rs  events.rs  lib.rs  media.rs  offer_answer.rs  pcm_audio_track.rs  pcm_encoder.rs  peer_connection.rs  rtp_sender.rs  rtp_transceiver.rs
crates/core/tests/: peer_connection_test.rs
crates/mixer/: Cargo.toml
crates/mixer/src/: bus.rs  decode.rs  frame.rs  graph.rs  lib.rs
crates/signaling/: Cargo.toml
crates/signaling/src/: lib.rs
crates/speech/: Cargo.toml
crates/speech/src/: agent.rs  config.rs  error.rs  events.rs  lib.rs  otel.rs  pcm.rs  pipeline.rs  registry.rs  stt_pre_roll.rs  tts_buffer.rs  vad.rs
crates/speech/src/otel/: enabled.rs
crates/speech/tests/: agent_barge_in_test.rs  barge_in_test.rs  event_bus_test.rs  otel_test.rs  stt_pre_roll_test.rs  tts_injection_test.rs  vad_test.rs
crates/vendor-assemblyai/: Cargo.toml
crates/vendor-assemblyai/src/: client.rs  factory.rs  lib.rs  stt.rs
crates/vendor-assemblyai/tests/: vendor_test.rs
crates/vendor-cartesia/: Cargo.toml
crates/vendor-cartesia/src/: client.rs  factory.rs  lib.rs  tts.rs
crates/vendor-cartesia/tests/: vendor_test.rs
crates/vendor-deepgram/: Cargo.toml
crates/vendor-deepgram/src/: factory.rs  lib.rs  stt.rs
crates/vendor-deepgram/tests/: vendor_test.rs
crates/vendor-elevenlabs/: Cargo.toml
crates/vendor-elevenlabs/src/: factory.rs  lib.rs  tts.rs
crates/vendor-elevenlabs/tests/: vendor_test.rs
crates/vendor-google/: Cargo.toml
crates/vendor-google/src/: auth.rs  factory.rs  lib.rs  stt.rs  tts.rs
crates/vendor-google/tests/: vendor_test.rs
crates/vendor-mock/: Cargo.toml
crates/vendor-mock/src/: factory.rs  lib.rs  stt.rs  tts.rs
crates/vendor-openai/: Cargo.toml
crates/vendor-openai/src/: factory.rs  lib.rs  stt.rs  tts.rs
crates/vendor-openai/tests/: vendor_test.rs
crates/vendor-sherpa-onnx/: Cargo.toml  README.md
crates/vendor-sherpa-onnx/src/: audio.rs  factory.rs  lib.rs  loader.rs  model_paths.rs  pool.rs  stt.rs  tts.rs  tts_model_paths.rs
crates/vendor-sherpa-onnx/tests/: pool_sharing.rs  vendor_test.rs
docker/ci/: Dockerfile  Dockerfile.alpine
docker/coturn/: ci-turnserver.conf
docker/coturn/ci/: Dockerfile
docs/: connection-errors.md  offline-sherpa-stt-plan.md  signaling-peer-ids.md  webrtc-api-parity.md
examples/: README.md
examples/audio-cosine/: package.json
examples/browser-cosine-chat/: README.md  package.json
examples/conference-room/: README.md  package.json
examples/conference-room-manual-signaling/: README.md  package.json  tsconfig.json
examples/peer-connection/: package.json  tsconfig.json
examples/shared/: VOICE_VENDOR_REFERENCE.md  audio-visualizer.js  echo-voice-handler.ts  free-port.ts  game-state-sync.js  game-state-sync.ts  pcm-streaming.ts  sherpa-local-model-catalog.json  sherpa-tts-model-catalog.json  speech-event-log.ts  voice-debug-config.ts  voice-vendor-docs.ts  voice-vendor-presets.ts  webrtc-demo-helpers.ts
examples/voice-agent/: README.md  package.json
examples/voice-agent-browser/: README.md  package.json
examples/voice-agent-echo-pod/: README.md  package.json  tsconfig.json
examples/voice-agent-local-sherpa/: README.md  ROUNDTRIP.md  package.json  tsconfig.json
examples/voice-agent-local-sherpa-multi-client/: README.md  package.json  tsconfig.json
examples/voice-agent-multi-session-pod/: README.md  package.json
scripts/: README.md  RELEASE.md  changelog-release-body.sh  export-sherpa-local-models.sh  fix-esm-import-extensions.mjs  fix-rollup-native.sh  free-port.sh  install-workspace.sh  make-sherpa.sh  release-local.sh  release-publish.sh  run-all-tests.sh  smoke-esm-sdk-import.mjs
scripts/ci/: README.md  build-sherpa-onnx-musl-libs.sh  build-ts-workspace.sh  bump-workspace-versions.sh  check-main-ci-success.sh  ci-step.sh  compute-pr-job-gates.sh  compute-pr-job-gates.test.sh  ensure-ts-dist.sh  ensure-vitest-optional-bindings.sh  ensure-workspace-bindings.sh  install-alpine-native-toolchain.sh  install-pre-push-hook.sh  list-release-targets.sh  native-binding-cache-key.sh  npm-ci-workspace.sh  plan-native-builds.sh  post-release-sync-main-package-lock.sh  refresh-package-lock-optional-bindings.sh  run-helpers-unit-tests.sh  run-if-helpers-changed.sh  run-pr-integration.sh  run-pr-quality.sh  run-pr-test-job-docker.sh  run-pr-tests-full.sh  run-pre-push-gates.sh  run-sherpa-example-ci.sh  run-sherpa-roundtrip-e2e.sh  run-with-timeout.sh  set-release-deps.sh  sync-lock-workspace-versions.sh  sync-workspace-bindings.sh  ts-dist-cache-key.sh  tsconfig.build-sdk.cjs.json  tsconfig.build-sdk.esm.json  tsconfig.typecheck.json  validate-package-lock-optional-bindings.sh  verify-checks.sh  verify-linux.sh  verify-musl-native-build-docker.sh  (+4 more)
(+84 files in other folders)
