[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/mixer",
    "crates/conference",
    "crates/signaling",
    "crates/speech",
    "packages/bindings",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/akirilyuk/node-webrtc-rust"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webrtc = "0.17"
axum = "0.8"
napi = { version = "2", features = ["async", "napi4"] }
napi-derive = "2"
