[package]
name = "node-webrtc-rust-conference"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Conference room lifecycle, mixing, and signaling for node-webrtc-rust"

[dependencies]
node-webrtc-rust-core = { path = "../core" }
node-webrtc-rust-mixer = { path = "../mixer" }
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
env_logger = "0.11"
