[package]
name = "node-webrtc-rust-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure Rust WebRTC engine wrapping webrtc-rs"

[dependencies]
webrtc = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
