[package]
name = "node-webrtc-rust-mixer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PCM audio mixing pipeline for node-webrtc-rust"

[dependencies]
audiopus = "0.3.0-rc.0"
bytes = { workspace = true }
thiserror = { workspace = true }
