[package]
name = "node-webrtc-rust-speech"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Voice agent orchestration: VAD, STT/TTS pipeline, and speech events"

[features]
default = ["energy-vad"]
silero-vad = ["dep:silero-vad-rust"]
energy-vad = []

[dependencies]
async-trait = "0.1"
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
silero-vad-rust = { version = "6.2", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
