[package]
name = "node-webrtc-rust-speech"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Voice agent orchestration: VAD, STT/TTS pipeline, and speech events"

[features]
default = ["energy-vad"]
# Pin ort =2.0.0-rc.10 (matches silero-vad-rust); rc.12 breaks ndarray alignment.
silero-vad = ["dep:silero-vad-rust", "dep:ort"]
energy-vad = []

[dependencies]
async-trait = "0.1"
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
silero-vad-rust = { version = "6.2.1", optional = true, default-features = false }
ort = { version = "=2.0.0-rc.10", optional = true, default-features = false, features = ["ndarray"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
node-webrtc-rust-vendor-mock = { path = "../vendor-mock" }
