[package]
name = "node-webrtc-rust-vendor-assemblyai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AssemblyAI STT in-repo WebSocket client"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
bytes = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
node-webrtc-rust-speech = { path = "../speech" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
