[package]
name = "node-webrtc-rust-vendor-deepgram"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deepgram STT vendor adapter"

[features]
default = []
live = [
    "dep:base64",
    "dep:futures-util",
    "dep:reqwest",
    "dep:serde",
    "dep:serde_json",
    "dep:tokio-tungstenite",
]

[dependencies]
async-trait = "0.1"
base64 = { version = "0.22", optional = true }
bytes = { workspace = true }
futures-util = { version = "0.3", optional = true, default-features = false, features = ["sink"] }
node-webrtc-rust-speech = { path = "../speech" }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.26", optional = true, default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
