[package]
name = "node-webrtc-rust-vendor-elevenlabs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ElevenLabs TTS vendor adapter"

[features]
default = []
live = []

[dependencies]
async-trait = "0.1"
bytes = { workspace = true }
node-webrtc-rust-speech = { path = "../speech" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
