[package]
name = "node-webrtc-rust-vendor-openai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAI STT/TTS vendor adapter for node-webrtc-rust"

[features]
default = []
live = ["dep:async-openai"]

[dependencies]
async-openai = { version = "0.28", optional = true }
async-trait = "0.1"
bytes = { workspace = true }
node-webrtc-rust-speech = { path = "../speech" }
thiserror = { workspace = true }
tokio = { workspace = true }
