[package]
name = "node-webrtc-rust-vendor-sherpa-onnx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local Sherpa ONNX streaming STT vendor adapter"

[dependencies]
async-trait = "0.1"
bytes = { workspace = true }
node-webrtc-rust-speech = { path = "../speech" }
sherpa-onnx = "1.13.2"
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
