[package]
name = "node-webrtc-rust-vendor-sherpa-onnx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local Sherpa ONNX streaming STT and offline TTS vendor adapter"

[dependencies]
async-trait = "0.1"
bytes = { workspace = true }
node-webrtc-rust-speech = { path = "../speech" }
thiserror = { workspace = true }
tokio = { workspace = true }

# Pre-musl work: static Sherpa prebuilts (glibc, macOS, Windows, linux-gnu).
[target.'cfg(not(target_env = "musl"))'.dependencies]
sherpa-onnx = "1.13.2"

# Musl-only: link shared Sherpa + Alpine onnxruntime (see build-sherpa-onnx-musl-libs.sh).
[target.'cfg(target_env = "musl")'.dependencies]
sherpa-onnx = { version = "1.13.2", default-features = false, features = ["shared"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
